# lazyc

./: Cargo.toml  README.md  todo.md
resources/: CMakeLists_template.cmake  CMakePresets_template.json  CmakeLists_template.cmake  module_template.c
src/: build.rs  clean.rs  cmake.rs  commands.rs  configure.rs  main.rs  module.rs  new.rs  run.rs  terminal.rs
src/cmake/: actions.rs  lists.rs
src/commands/: build.rs  clean.rs  configure.rs  module.rs  new.rs  run.rs
