[package]
name = "lazyc"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Wrapper For CMake commands with CMakePresets"
keywords = ["cli", "cmake", "c", "cpp"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/PGIII/lazyc/"
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
colored = "2.0.0"
exitcode = "1.1.2"
json = "0.12.4"
